minor bug overflow fixed

--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 #main {
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   background: #ededed;
   display: grid;
   grid-template-columns: 25% 25% 50%;
